--- a/src/sections/About/About.module.scss
+++ b/src/sections/About/About.module.scss
@@ -3,7 +3,7 @@
 @use '../../styles/mixins.module' as localMixins;
 
 .container {
-  padding: 7rem 0;
+  padding: 4rem 0;
 }
 
 .about {
