--- a/src/sections/Splash/Splash.module.scss
+++ b/src/sections/Splash/Splash.module.scss
@@ -2,11 +2,17 @@
 @use '../../styles/mixins.module' as localMixins;
 
 .container {
+  box-sizing: border-box;
   position: relative;
+  padding: 8rem 0;
+
+  @include localMixins.media(mobile) {
+    padding: 4rem;
+  }
 }
 
 .content {
-  padding: 7.75rem 0 12rem;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -61,4 +67,8 @@
 
 .socials {
   margin: 1rem 0 5rem;
+
+  @include localMixins.media(mobile) {
+    margin-bottom: 2rem;
+  }
 }
